Add docstring example.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <section data-markdown="slides/03-using-exunit-code.md"></section>
                 <section data-markdown="slides/04-using-exunit-running.md"></section>
                 <section data-markdown="slides/05-using-exunit-processes.md"></section>
+                <section data-markdown="slides/06-using-exunit-docstrings.md"></section>
 			</div>
 		</div>
 
