Add slides on skipping tests.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 <section data-markdown="slides/04-using-exunit-running.md"></section>
                 <section data-markdown="slides/05-using-exunit-processes.md"></section>
                 <section data-markdown="slides/06-using-exunit-docstrings.md"></section>
+                <section>
+					<subsection data-markdown="slides/07a-using-exunit-skipping-tests.md"></subsection>
+                	<subsection data-markdown="slides/07b-using-exunit-skipping-tests.md"></subsection>
+                </section>
+                
 			</div>
 		</div>
 
