Add thanks slide.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 					<subsection data-markdown="slides/07a-using-exunit-skipping-tests.md"></subsection>
                 	<subsection data-markdown="slides/07b-using-exunit-skipping-tests.md"></subsection>
                 </section>
+                <section>
+                	#Thank you!
+                </section>
                 
 			</div>
 		</div>
